--- a/src/AwsCredentials.properties
+++ b/src/AwsCredentials.properties
@@ -1,4 +1,4 @@
 #Insert your AWS Credentials from http://aws.amazon.com/security-credentials
 #Fri May 11 02:02:46 PDT 2012
 secretKey=
-accessKey=test
+accessKey=
